add service and controller. add custom exception in progress. add sql file.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ server.servlet.context-path=/minispring
 jdbc.driver=com.mysql.jdbc.Driver
 jdbc.url=jdbc:mysql://localhost:3306/minispring?user=root&useUnicode=true&characterEncoding=utf8&useSSL=false
 jdbc.user=root
-jdbc.password=root
+jdbc.password=echoecho
 
 #Mybatis
 mybatis_config_file=mybatis-config.xml
